# Orange

./: .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/systemcontext/: CMakeLists.txt
src/systemcontext/include/: LoggerManager.h
src/systemcontext/src/: LoggerManager.cpp
src/ui/: CMakeLists.txt
src/ui/include/: Orange.h
src/ui/src/: Orange.cpp
